07_retirement/grade.txt
Grading at Mon Apr 20 08:56:49 UTC 2020
Attempting to compile retirement.c
retirement.c:10:9: error: unknown type name ‘_retire_info’
 typedef _retire_info retire_info;
         ^
retirement.c: In function ‘retBalance’:
retirement.c:13:20: error: request for member ‘rate_of_return’ in something not a structure or union
   current *= source.rate_of_return;
                    ^
retirement.c:14:26: error: request for member ‘contribution’ in something not a structure or union
   return current + source.contribution;
                          ^
retirement.c: In function ‘computeRetirement’:
retirement.c:18:29: error: request for member ‘months’ in something not a structure or union
   for (int i = 0; i < source.months; i++) {
                             ^
retirement.c: In function ‘retirement’:
retirement.c:31:58: error: request for member ‘months’ in something not a structure or union
   initial = computeRetirement(retired, startAge + working.months, initial);
                                                          ^
retirement.c: In function ‘main’:
retirement.c:39:10: error: request for member ‘months’ in something not a structure or union
   working.months = 489;
          ^
retirement.c:40:10: error: request for member ‘contribution’ in something not a structure or union
   working.contribution = 1000;
          ^
retirement.c:41:10: error: request for member ‘rate_of_return’ in something not a structure or union
   working.rate_of_return = 0.045/12;
          ^
retirement.c:43:10: error: request for member ‘months’ in something not a structure or union
   retired.months = 384;
          ^
retirement.c:44:10: error: request for member ‘contribution’ in something not a structure or union
   retired.contribution = -4000;
          ^
retirement.c:45:10: error: request for member ‘rate_of_return’ in something not a structure or union
   retired.rate_of_return = 0.01/12;
          ^
retirement.c: In function ‘retBalance’:
retirement.c:15:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
